--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,7 +59,7 @@ nav:
   - 'index.md'
   - Glossary: glossary.md
   - Presentation: presentation.md
-  - Glossary: references.md
+  - References: references.md
   - Team: team.md
   - 'Written Report': written-report.md
 
